--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -305,10 +305,6 @@
   "admin_nav_audit": "Audit Log",
   "admin_nav_maintenance": "Maintenance",
   "admin_nav_inbox": "Admin Inbox",
-  "admin_inbox_error_message_required": "Please enter a message.",
-  "admin_inbox_error_user_required": "Please enter a user ID.",
-  "admin_inbox_success_sent": "Message sent successfully!",
-  "admin_inbox_error_failed": "Failed to send message.",
   "admin_nav_back_to_game": "Back to Game",
   "admin_dashboard_title": "Control Panel",
   "admin_live_overview": "Live Overview",
@@ -412,6 +408,20 @@
   "admin_btn_save_changes": "SAVE CHANGES",
   "admin_processing": "PROCESS...",
   "admin_chart_users": "users",
+  "admin_inbox_send_title": "Send Inbox Message",
+  "admin_inbox_broadcast_label": "Global Broadcast to All Users",
+  "admin_inbox_target_label": "Target User ID",
+  "admin_inbox_content_label": "Message Content",
+  "admin_inbox_send_btn": "SEND MESSAGE 📤",
+  "admin_inbox_placeholder_user_id": "Enter User ID...",
+  "admin_inbox_placeholder_content": "Type your message here...",
+  "admin_inbox_error_message_required": "Message text is required",
+  "admin_inbox_error_user_required": "User ID is required",
+  "admin_inbox_success_sent": "Inbox message sent successfully",
+  "admin_inbox_error_failed": "Failed to send inbox message",
+  "admin_inbox_find_user_btn": "Find",
+  "admin_inbox_select_user_title": "Select User",
+  "admin_inbox_search_user_placeholder": "Search by nickname or ID...",
   "btn_cancel": "Cancel",
   "btn_confirm": "Confirm",
   "btn_continue": "Continue",
@@ -503,6 +513,25 @@
     "page_info": "Page {current} of {total}",
     "admin_message_title": "📢 Message from Administration",
     "admin_message_content": "{text}",
-    "click_to_expand": "Click to read more..."
+    "click_to_expand": "Click to read more...",
+    "game_invite_title": "Game Invitation",
+    "game_invite_content": "User **{fromUsername}** invites you to join a game.",
+    "admin_coins_added_title": "Coins Received",
+    "admin_coins_added_content": "Admin added **{amount}** coins to your balance. Reason: {reason}",
+    "admin_mute_title": "Chat Restricted",
+    "admin_mute_content": "You have been muted for: **{reason}**{until}",
+    "admin_unmute_title": "Chat Restored",
+    "admin_unmute_content": "Admin has removed your chat restriction.",
+    "admin_ban_title": "Account Banned",
+    "admin_ban_content": "Your account has been banned for: **{reason}**{until}. Please contact support.",
+    "admin_unban_title": "Account Restored",
+    "admin_unban_content": "Your account has been restored by an administrator.",
+    "admin_session_terminated_title": "Session Terminated",
+    "admin_session_terminated_content": "Your session was forcibly terminated by an administrator.",
+    "btn_join": "Join",
+    "action_result_accepted": "Accepted",
+    "action_result_expired": "Expired/Ended",
+    "action_result_coins_received": "Received",
+    "action_result_acknowledged": "Acknowledged"
   }
 }
