--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -304,10 +304,6 @@
   "admin_nav_audit": "Лог аудита",
   "admin_nav_maintenance": "Техработы",
   "admin_nav_inbox": "Admin Inbox",
-  "admin_inbox_error_message_required": "Введите сообщение.",
-  "admin_inbox_error_user_required": "Введите ID пользователя.",
-  "admin_inbox_success_sent": "Сообщение отправлено!",
-  "admin_inbox_error_failed": "Ошибка отправки.",
   "admin_nav_back_to_game": "Вернуться в игру",
   "admin_dashboard_title": "Панель управления",
   "admin_live_overview": "Живой обзор",
@@ -411,6 +407,20 @@
   "admin_btn_save_changes": "СОХРАНИТЬ ИЗМЕНЕНИЯ",
   "admin_processing": "ОБРАБОТКА...",
   "admin_chart_users": "польз.",
+  "admin_inbox_send_title": "Отправить сообщение",
+  "admin_inbox_broadcast_label": "Рассылка всем пользователям",
+  "admin_inbox_target_label": "ID целевого пользователя",
+  "admin_inbox_content_label": "Содержание сообщения",
+  "admin_inbox_send_btn": "ОТПРАВИТЬ СООБЩЕНИЕ 📤",
+  "admin_inbox_placeholder_user_id": "Введите ID пользователя...",
+  "admin_inbox_placeholder_content": "Напишите ваше сообщение здесь...",
+  "admin_inbox_error_message_required": "Текст сообщения обязателен",
+  "admin_inbox_error_user_required": "ID пользователя обязателен",
+  "admin_inbox_success_sent": "Сообщение успешно отправлено",
+  "admin_inbox_error_failed": "Не удалось отправить сообщение",
+  "admin_inbox_find_user_btn": "Найти",
+  "admin_inbox_select_user_title": "Выберите пользователя",
+  "admin_inbox_search_user_placeholder": "Поиск по нику или ID...",
   "btn_cancel": "Отмена",
   "btn_confirm": "Подтвердить",
   "btn_continue": "Продолжить",
@@ -504,6 +514,25 @@
     "page_info": "Страница {current} из {total}",
     "admin_message_title": "📢 Сообщение от Администрации",
     "admin_message_content": "{text}",
-    "click_to_expand": "Нажмите, чтобы прочитать полностью..."
+    "click_to_expand": "Нажмите, чтобы прочитать полностью...",
+    "game_invite_title": "Приглашение в игру",
+    "game_invite_content": "Игрок **{fromUsername}** приглашает вас присоединиться к игре.",
+    "admin_coins_added_title": "Монеты получены",
+    "admin_coins_added_content": "Администратор добавил вам **{amount}** монет. Повод: {reason}",
+    "admin_mute_title": "Ограничение чата",
+    "admin_mute_content": "Вам выдано ограничение чата по причине: **{reason}**{until}",
+    "admin_unmute_title": "Чат разблокирован",
+    "admin_unmute_content": "Администратор снял с вас ограничение чата.",
+    "admin_ban_title": "Аккаунт заблокирован",
+    "admin_ban_content": "Ваш аккаунт заблокирован по причине: **{reason}**{until}. Пожалуйста, свяжитесь с поддержкой.",
+    "admin_unban_title": "Аккаунт разблокирован",
+    "admin_unban_content": "Ваш аккаунт был разблокирован администратором.",
+    "admin_session_terminated_title": "Сессия завершена",
+    "admin_session_terminated_content": "Ваша сессия была принудительно завершена администратором.",
+    "btn_join": "Присоединиться",
+    "action_result_accepted": "Принято",
+    "action_result_expired": "Истекло/Завершено",
+    "action_result_coins_received": "Получено",
+    "action_result_acknowledged": "Прочитано"
   }
 }
