--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -304,10 +304,6 @@
   "admin_nav_audit": "Лог аудиту",
   "admin_nav_maintenance": "Техроботи",
   "admin_nav_inbox": "Admin Inbox",
-  "admin_inbox_error_message_required": "Введіть повідомлення.",
-  "admin_inbox_error_user_required": "Введіть ID користувача.",
-  "admin_inbox_success_sent": "Повідомлення надіслано!",
-  "admin_inbox_error_failed": "Помилка відправки.",
   "admin_nav_back_to_game": "Повернутися у гру",
   "admin_dashboard_title": "Панель управління",
   "admin_live_overview": "Живий огляд",
@@ -411,6 +407,20 @@
   "admin_btn_save_changes": "ЗБЕРЕГТИ ЗМІНИ",
   "admin_processing": "ОБРОБКА...",
   "admin_chart_users": "корист.",
+  "admin_inbox_send_title": "Надіслати повідомлення",
+  "admin_inbox_broadcast_label": "Розсилка усім користувачам",
+  "admin_inbox_target_label": "ID цільового користувача",
+  "admin_inbox_content_label": "Зміст повідомлення",
+  "admin_inbox_send_btn": "НАДІСЛАТИ ПОВІДОМЛЕННЯ 📤",
+  "admin_inbox_placeholder_user_id": "Введіть ID користувача...",
+  "admin_inbox_placeholder_content": "Напишіть ваше повідомлення тут...",
+  "admin_inbox_error_message_required": "Текст повідомлення обов'язковий",
+  "admin_inbox_error_user_required": "ID користувача обов'язковий",
+  "admin_inbox_success_sent": "Повідомлення успішно надіслано",
+  "admin_inbox_error_failed": "Не вдалося надіслати повідомлення",
+  "admin_inbox_find_user_btn": "Знайти",
+  "admin_inbox_select_user_title": "Виберіть користувача",
+  "admin_inbox_search_user_placeholder": "Пошук за ніком або ID...",
   "btn_cancel": "Скасувати",
   "btn_confirm": "Підтвердити",
   "btn_continue": "Продовжити",
@@ -504,6 +514,25 @@
     "page_info": "Сторінка {current} з {total}",
     "admin_message_title": "📢 Повідомлення від Адміністрації",
     "admin_message_content": "{text}",
-    "click_to_expand": "Натисніть, щоб прочитати повністю..."
+    "click_to_expand": "Натисніть, щоб прочитати повністю...",
+    "game_invite_title": "Запрошення в гру",
+    "game_invite_content": "Гравець **{fromUsername}** запрошує вас приєднатися до гри.",
+    "admin_coins_added_title": "Монети отримано",
+    "admin_coins_added_content": "Адміністратор додав вам **{amount}** монет. Привід: {reason}",
+    "admin_mute_title": "Обмеження чату",
+    "admin_mute_content": "Вам видано обмеження чату з причини: **{reason}**{until}",
+    "admin_unmute_title": "Чат розблоковано",
+    "admin_unmute_content": "Адміністратор зняв з вас обмеження чату.",
+    "admin_ban_title": "Акаунт заблоковано",
+    "admin_ban_content": "Ваш акаунт заблоковано з причини: **{reason}**{until}. Будь ласка, зв'яжіться з підтримкою.",
+    "admin_unban_title": "Акаунт розблоковано",
+    "admin_unban_content": "Ваш акаунт було розблоковано адміністратором.",
+    "admin_session_terminated_title": "Сесію завершено",
+    "admin_session_terminated_content": "Вашу сесію було примусово завершено адміністратором.",
+    "btn_join": "Приєднатися",
+    "action_result_accepted": "Прийнято",
+    "action_result_expired": "Закінчився/Завершено",
+    "action_result_coins_received": "Отримано",
+    "action_result_acknowledged": "Прочитано"
   }
 }
