--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -534,5 +534,27 @@
     "action_result_expired": "Истекло/Завершено",
     "action_result_coins_received": "Получено",
     "action_result_acknowledged": "Прочитано"
+  },
+  "history_button": "Мои матчи",
+  "history": {
+    "title": "История матчей",
+    "no_matches": "У вас пока нет сыгранных матчей.",
+    "outcome_win": "Победа",
+    "outcome_loss": "Поражение",
+    "outcome_draw": "Ничья",
+    "analyze_btn": "Анализировать (250 💰)",
+    "analyze_title": "Анализ матча",
+    "move_best": "Лучший ход",
+    "move_excellent": "Отлично",
+    "move_good": "Хорошо",
+    "move_inaccuracy": "Неточность",
+    "move_mistake": "Ошибка",
+    "move_blunder": "Зевок",
+    "move_forced": "Вынужденный ход",
+    "analysis_expired": "Анализ доступен только для последних 15 матчей (не старше 14 дней).",
+    "playing_as": "Играли за",
+    "back_to_history": "Назад к истории",
+    "analysis_ready": "Анализ готов",
+    "calculating": "Вычисление..."
   }
 }
