--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -191,7 +191,7 @@
   "find_game": "Знайти гру",
   "create_game": "Створити гру",
   "lobby_list_public": "Публічні ігри",
-  "no_public_lobbies": "Наразі немає відкритих ігор. Створіть свою!",
+  "no_public_lobbies": "Наразі немає відкритих ігор. Створить свою!",
   "join_private_lobby": "Увійти за кодом",
   "enter_code_placeholder": "Код або ID гри...",
   "lobby_type": "Тип лобі",
@@ -495,7 +495,7 @@
   "admin_device_banned_badge": "ЗАБАНЕНИЙ",
   "error_session_terminated_admin": "Ваш сеанс був завершений адміністратором або іншим користувачем цього акаунта.",
   "inbox": {
-    "title": "📥 Вхідні",
+    "title": "📥 Inbox",
     "empty": "У вас немає повідомлень.",
     "btn_accept": "Прийняти",
     "btn_decline": "Відхилити",
@@ -534,5 +534,27 @@
     "action_result_expired": "Закінчився/Завершено",
     "action_result_coins_received": "Отримано",
     "action_result_acknowledged": "Прочитано"
+  },
+  "history_button": "Мої матчі",
+  "history": {
+    "title": "Історія матчів",
+    "no_matches": "У вас поки що немає зіграних матчів.",
+    "outcome_win": "Перемога",
+    "outcome_loss": "Поразка",
+    "outcome_draw": "Нічия",
+    "analyze_btn": "Аналізувати (250 💰)",
+    "analyze_title": "Аналіз матчу",
+    "move_best": "Найкращий хід",
+    "move_excellent": "Відмінно",
+    "move_good": "Добре",
+    "move_inaccuracy": "Неточність",
+    "move_mistake": "Помилка",
+    "move_blunder": "Зевок",
+    "move_forced": "Вимушений хід",
+    "analysis_expired": "Аналіз доступний тільки для останніх 15 матчів (не старіше 14 днів).",
+    "playing_as": "Грали за",
+    "back_to_history": "Назад до історії",
+    "analysis_ready": "Аналіз готовий",
+    "calculating": "Обчислення..."
   }
 }
